--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="fs-1 text-center">Battleship</p>
         </div>
 
-        <div class="content-fluid d-flex justify-content-center">
+        <div id="gameBoard" class="content-fluid d-flex justify-content-center">
             <table id="game" class="table table-light" style="border-collapse: separate !important; max-width: 500px;">
                 <thead>
                     <tr class="table-secondary">
